[package]
name = "wechat-pub-rs"
version = "0.7.0"
authors = ["tyr.chen@gmail.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/wechat-pub-rs"
repository = "https://github.com/tyrchen/wechat-pub-rs"
homepage = "https://github.com/tyrchen/wechat-pub-rs"
description = "A simple, high-performance WeChat Official Account Rust SDK for uploading articles and managing drafts"
readme = "README.md"
categories = ["development-tools"]
keywords = ["wechat", "weixin", "official-account", "sdk"]
include = [
  "src/",
  "templates/",
  "themes/",
  "Cargo.toml",
  "LICENSE.md",
  "README.md",
]


[dependencies]
# HTTP client with minimal features
reqwest = { version = "0.13", features = ["json", "multipart", "stream"] }

tokio = { version = "1.50", default-features = false, features = [
  "fs",
  "time",
  "sync",
  "rt",
  "rt-multi-thread",
  "macros",
  "process",
] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Markdown processing
comrak = "0.51"
syntect = "5.3"

# Template engine
askama = "0.15"

# Logging
tracing = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# File utilities
mime_guess = "2.0"

# Content hashing for image deduplication
blake3 = "1.8.3"

# CSS processing
regex = "1.12"
css-inline = "0.20"

# HTML parsing for better code block processing
scraper = "0.25"

# Random number generation for jitter
fastrand = "2.3"

# Async traits
async-trait = "0.1"

# UUID generation for temporary file names
uuid = { version = "1.22", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.11"
criterion = "0.8"
tempfile = "3.27"
